--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   },
   "homepage": "https://github.com/Alicewu216/react-raw-feed#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.19",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
